cedarentities/test/corpus/examples/gitapp.txt
================================================================================
gitapp
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-policy-language-in-action/GitApp/gitapp.cedarentities.json

namespace GitApp {
  instance Application::"GitApp";

  instance User::"JaneDoe";
  instance User::"JohnDoe";
  instance User::"RichardRoe";
  instance User::"JorgeSouza";

  instance Repo::"CodeRepo1" in Application::"GitApp" {
    admins: [User::"JaneDoe", User::"JohnDoe"],
    reporters: [User::"RichardRoe"]
  };

  instance Repo::"CodeRepo2" in Application::"GitApp" {
    admins: [User::"RichardRoe"],
    contributors: [User::"JorgeSouza"]
  };
}

--------------------------------------------------------------------------------

(entities
  (comment)
  (namespace
    (name
      (identifier))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content))))
      (record
        (record_entry
          (identifier)
          (set
            (entity_reference
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (string
                (string_content)))))
        (record_entry
          (identifier)
          (set
            (entity_reference
              (identifier)
              (string
                (string_content)))))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_reference
          (identifier)
          (string
            (string_content))))
      (record
        (record_entry
          (identifier)
          (set
            (entity_reference
              (identifier)
              (string
                (string_content)))))
        (record_entry
          (identifier)
          (set
            (entity_reference
              (identifier)
              (string
                (string_content)))))))))
