cedarentities/test/corpus/regressions/annotation_unclosed.txt
================================================================================
annotation_unclosed
================================================================================

@doc("x"

instance Recovered::"s";

--------------------------------------------------------------------------------

(entities
  (instance
    (annotation
      (identifier)
      (string
        (string_content)))
    (entity_reference
      (identifier)
      (string
        (string_content)))))
