cedarentities/test/corpus/regressions/incomplete_instance.txt
================================================================================
incomplete_instance
================================================================================

instance

instance Recovered::"s";

--------------------------------------------------------------------------------

(entities
  (instance)
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
