cedarentities/test/corpus/regressions/incomplete_path.txt
================================================================================
incomplete_path
================================================================================

instance A::

instance Recovered::"s";

--------------------------------------------------------------------------------

(entities
  (instance
    (entity_reference
      (identifier)))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
