cedarentities/test/corpus/regressions/incomplete_record.txt
================================================================================
incomplete_record
================================================================================

instance A::"x" =

instance Recovered::"s";

--------------------------------------------------------------------------------

(entities
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
