cedarentities/test/corpus/regressions/keyword_annotation.txt
================================================================================
keyword_annotation
================================================================================

@instance("x")
instance Annotated::"a";

--------------------------------------------------------------------------------

(entities
  (instance
    (annotation
      (identifier)
      (string
        (string_content)))
    (entity_reference
      (identifier)
      (string
        (string_content)))))
