cedarentities/test/corpus/regressions/keyword_parents_list.txt
================================================================================
keyword_parents_list
================================================================================

instance B::"b" in [instance::"i"];

instance Recovered::"s";

--------------------------------------------------------------------------------

(entities
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (instance_parents
      (entity_list
        (entity_reference
          (identifier)
          (string
            (string_content))))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
