cedarentities/test/corpus/regressions/partial.txt
================================================================================
partial
================================================================================

instance A::"x" = { k: }
instance B::"y" = { a: 1, b: };

--------------------------------------------------------------------------------

(entities
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier)
        (integer))
      (record_entry
        (identifier)))))
