cedarentities/test/corpus/regressions/strings.txt
================================================================================
strings
================================================================================

instance User::"ali
instance Recovered in [Parent];

--------------------------------------------------------------------------------

(entities
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
