cedarentities/test/corpus/regressions/terminators.txt
================================================================================
terminators
================================================================================

instance User::"alice" = { level: 1 }

instance Group::"admins" in [Group::"all"]

namespace NS {
  instance Inner::"x"
}

instance Last::"y";

--------------------------------------------------------------------------------

(entities
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (record
      (record_entry
        (identifier)
        (integer))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))
    (instance_parents
      (entity_list
        (entity_reference
          (identifier)
          (string
            (string_content))))))
  (namespace
    (name
      (identifier))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))))
  (instance
    (entity_reference
      (identifier)
      (string
        (string_content)))))
