cedarentities/test/corpus/rfc/entity_data_syntax_1.txt
================================================================================
entity_data_syntax_1
================================================================================

// https://github.com/cedar-policy/rfcs/blob/d51ecf5ec1717609783977a4e45f60a644c52618/text/0104-entity-data-syntax.md?plain=1#L95-L111

namespace PhotoApp {
  instance User::"alice" in [UserGroup::"alice_friends", UserGroup::"AVTeam"] {
      userId: "897345789237492878",
      personInformation: {
          age: 25,
          name: "alice"
      }
  };

  instance Photo::"vacationPhoto.jpg" {
      private: false,
      account: Account::"ahmad"
  };

  instance UserGroup::"alice_friends";
  instance UserGroup::"AVTeam";
}

--------------------------------------------------------------------------------

(entities
  (comment)
  (namespace
    (name
      (identifier))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (instance_parents
        (entity_list
          (entity_reference
            (identifier)
            (string
              (string_content)))
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (record
        (record_entry
          (identifier)
          (string
            (string_content)))
        (record_entry
          (identifier)
          (record
            (record_entry
              (identifier)
              (integer))
            (record_entry
              (identifier)
              (string
                (string_content)))))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content)))
      (record
        (record_entry
          (identifier)
          (false))
        (record_entry
          (identifier)
          (entity_reference
            (identifier)
            (string
              (string_content))))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))
    (instance
      (entity_reference
        (identifier)
        (string
          (string_content))))))
